--- a/templates/landing.html
+++ b/templates/landing.html
@@ -26,21 +26,23 @@
       </div>
       {% endfor %}
     </div>
-    <form method="post" class="tracks-container" action="{% url 'update_audio' %}">
+    <div class="tracks-container">
+    <form method="post" class="tracks-form" action="{% url 'update_audio' %}">
       {% csrf_token %}
+      <input class='bpm' type="number" id='bpm' name="bpm" value="{{bpm}}">
       {% for track in tracks %}
       <div class="instrument">{{track.name}}</div>
       <div class="track">
         {% for beat in loop_array %}
         <input type="checkbox" id="track-{{track.track_id}}-beat-{{ beat }}" name="track-{{track.track_id}}"
-        value="{{ beat }}"
-        {% if beat in track.beats %}checked{% endif %}>
+          value="{{ beat }}" {% if beat in track.beats %}checked{% endif %}>
         <label for="track-{{track.track_id}}-beat-{{ beat }}">{{ forloop.counter }}</label>
         {% endfor %}
       </div>
       {% endfor %}
       <button class="update-audio-submit" type="submit">Update</button>
     </form>
+  </div>
   </main>
   <script>
     // Disable navigate away confirmation
