--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -24,6 +24,7 @@ main {
 .player-wrapper p {
   color: white;
   font-size: 1.5rem;
+  margin: 0 0 .3rem;
 }
 
 .instrument {
@@ -50,11 +51,11 @@ main {
 
 .track {
   display: grid;
-  gap: 1rem;
+  gap: .5rem;
   width: 100%;
   margin: .5rem 0;
   padding: .5rem;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   background: lightblue;
   border-radius: .5rem;
 }
@@ -65,17 +66,15 @@ input[type="checkbox"] {
 
 .track label {
   display: inline-block;
-  font-size: 1.3rem;
   color: white;
-  font-family: sans-serif;
-  font-weight: bold;
-  padding: 5px 10px;
   border: 2px solid transparent;
-  border-radius: 100px;
+  border-radius: 15rem;
   cursor: pointer;
   transition: all 0.3s ease;
   -webkit-tap-highlight-color: transparent;
   text-align: center;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 input[type="checkbox"]:checked+label {
