keyboard, fix remix

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -46,9 +46,9 @@
           <div class="track">
             {% for beat in loop_array %}
             <div class="beat">
-              <input type="checkbox" id="track-{{track.track_id}}-beat-{{ beat }}" name="track-{{track.track_id}}"
+              <input type="checkbox" id="track-{{track.track_id}}-{{forloop.parentloop.counter0}}-beat-{{ beat }}" name="track-{{forloop.parentloop.counter0}}-{{track.track_id}}"
                 value="{{ beat }}" {% if beat in tone %}checked{% endif %}>
-              <label for="track-{{track.track_id}}-beat-{{ beat }}"></label>
+              <label for="track-{{track.track_id}}-{{forloop.parentloop.counter0}}-beat-{{ beat }}"></label>
             </div>
             {% endfor %}
           </div>
