--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,11 +1,12 @@
 body {
   background: rgb(218, 142, 142);
   min-width: 360px;
+  display: flex;
+  justify-content: center;
 }
 
 main {
   width: 100%;
-  max-width: 1080px;
 }
 
 .container {
@@ -79,6 +80,7 @@ input[type="checkbox"]:checked+label+.show-hide{
   border: 1px solid purple;
   border-radius: .5rem;
   width: calc(100vw - 30px);
+  max-width: 1080px;
   overflow-x: scroll;
 }
 
