--- a/templates/landing.html
+++ b/templates/landing.html
@@ -44,13 +44,13 @@
           <div class="track">
             {% for beat in loop_array %}
             <div class="beat">
-              <input type="checkbox" id="track-{{track.track_id}}-{{forloop.parentloop.counter0}}-beat-{{ beat }}" name="track-{{forloop.parentloop.counter0}}-{{track.track_id}}"
-                value="{{ beat }}" {% if beat in tone %}checked{% endif %}>
+              <input type="checkbox" id="track-{{track.track_id}}-{{forloop.parentloop.counter0}}-beat-{{ beat }}"
+                name="track-{{forloop.parentloop.counter0}}-{{track.track_id}}" value="{{ beat }}" {% if beat in tone
+                %}checked{% endif %}>
               <label for="track-{{track.track_id}}-{{forloop.parentloop.counter0}}-beat-{{ beat }}"></label>
             </div>
             {% endfor %}
           </div>
-          {% endfor %}
           {% endfor %}
         </div>
       </form>
